--- a/index.html
+++ b/index.html
@@ -16,42 +16,115 @@
           <div class="small-12 large-8 large-offset-2 cell padding-t-50">
             <h1><img class="float-left" src="images/CITC-logo-white.png" alt="Camping in the Clouds - Florence, WI" width="300"></h1>
             <h1 class="padding-t-50">Enjoy the beauty of the north woods.</h1>
-            <h2>Amazing food, views, and surrounding activities<br> in Florence, WI.</h2>
-            <a class="button float-right" href="#signup">Book a Reservation</a>
+            <h2>Amazing sites, views, food, and surrounding activities<br> in Florence, WI.</h2>
           </div>
         </div>
       </div>
     </div>
 
-  <div class="grid-x green-bg padding-b-100 text-center">
-    <div class="small-12 cell">
-      <h2 class="green">Join Our Team and Help Us <br/>Disrupt the Burrito Industry.</h2>
-      <p>Burrito Baton is currently looking to fill the following positions:</p>
-    </div>
-    <div class="grid-x grid-padding-x">
-      <div class="small-12 medium-6 padding-t-50 cell">
-        <h2 class="white">Burrista</h2>
-        <img src="images/zigzag-yellow.svg">
-        <p class="padding-t-50 white">Never made a burrito before? No problem! We are seeking slightly skilled burrito artisans looking to make money from home.</p>
-      </div>
-      <div class="small-12 medium-6 padding-t-50 cell">
-        <h2 class="white">Dispatch Team</h2>
-        <img src="images/zigzag-yellow.svg">
-        <p class="padding-t-50 white">Boring commute to work? Spice it up with a Burrito in hand. We promise not to slow you down. Pass the burrito… like a baton!</p>
-      </div>
-    </div><br>
-    <a class="button text-center" href="mailto:BurritoBaton@headway.io">Apply Today!</a>
-  </div>
 
   <div class="white-bg">
     <div class="grid-container">
-      <div class="grid-x grid-padding-x padding-t-100 padding-b-100">
+      <div class="grid-x grid-padding-x padding-b-100">
         <div class="small-8 small-offset-2 text-center cell relative">
-          <h1 class="padding-t-100">2018 Rates</h1>
+          <h1 class="padding-t-100">Book a Reservation</h1>
           <p class="padding-b-50">Stay 6 nights and the 7th night is FREE!</p>
+
+          <table class="text-left">
+            <thead>
+              <tr>
+                <th width="25%">Offering</th>
+                <th width="50%" style="padding-left: 25px;">Description</th>
+                <th width="25%" style="padding-left: 25px;">Cost</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="font-weight: bold;">Seasonal Campsite</td>
+                <td style="padding-left: 25px;">May 1, 2018 - April 30, 2019</td>
+                <td style="padding-left: 25px;">$1400</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td style="padding-left: 25px;">Includes: Electricity, Water and Sewer</td>
+                <td style="padding-left: 25px;"></td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Daily Sites</td>
+                <td style="padding-left: 25px;">Includes: Electricity, Water and Sewer</td>
+                <td style="padding-left: 25px;">$30/night</td>
+
+              </tr>
+              <tr>
+                <td></td>
+                <td style="padding-left: 25px;">Includes: Electricity and Water</td>
+                <td style="padding-left: 25px;">$25/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Tent Sites</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$18/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Park Model</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$65/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Cabins</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$50/night</td>
+              </tr>
+              <tr>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
   </div>
+
+  </div>
+  <div class="green-bg text-center">
+   <div class="grid-x grid-padding-x">
+    <div class="small-12 cell">
+      <h2 class="green">Come stay for a night or the entire season!</h2>
+      <p>Get directions below or give us a call if you have a question.</p>
+    </div>
+  </div>
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 medium-6 padding-t-50 cell">
+        <h4 class="white">Address</h2>
+        <p class="white">
+          Camping in the Clouds <br>
+          4080 US-2 <br>
+          Florence, WI 54121<br>
+          <a href="https://www.google.com/maps/dir/''/camping+in+the+clouds/data=!4m5!4m4!1m0!1m2!1m1!1s0x4d53c864249de501:0xc5688475b0463dd7?sa=X&ved=0ahUKEwjkxt6u1ZraAhUsyoMKHdzaBS0Q9RcIfDAL" class="button margin-t-25" target="_blank">Get Directions</a>
+        </p>
+      </div>
+      <div class="small-12 medium-6 padding-t-50 cell">
+        <h4 class="white">Contact</h2>
+        <p class="white">
+          Call us!<br>
+          <a href="tel:7155285596">(715) 528-5596</a></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="black-bg text-center">
+   <div class="grid-x grid-padding-x">
+    <div class="small-12 cell">
+      <h2 class="white">What Our Customers Say</h2>
+    </div>
+  </div>
+    <div class="grid-x grid-padding-x">
+      <div class="small-12 medium-6 medium-offset-3 padding-t-50 cell">
+        <p class="white">"We've been coming up every summer for about 7 years to visit my parents site, which has a beautiful view - their home away from home. The on-site amenities, include hot showers, a bar & restaurant, laundry and a pool. We are really excited about the NEW MANAGEMENT which is already making improvements, and the staff is friendly & helpful. We look forward to coming back!"</p>
+        <h4 class="white">Erin Arthur</h2>
+          <br><br>
+          <p class="white">"The food was amazing! Stone pizza was to die for and the mine shaft burger was excellent as well! The campground has nice views! Will definitely be back! Very friendly owner as well!"</p>
+          <h4 class="white">Brooke Elizabeth</h2>
+      </div>
+    </div>
   </div>
 
     <div class="grid-x">
