updating grid on pricing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="white-bg">
     <div class="grid-container">
       <div class="grid-x grid-padding-x padding-b-100">
-        <div class="small-8 small-offset-2 text-center cell relative">
+        <div class="small-12 medium-8 medium-offset-2 text-center cell relative">
           <h1 class="padding-t-100">Book a Reservation</h1>
           <p class="padding-b-50">Stay 6 nights and the 7th night is FREE!</p>
 
