updating mailchimp sign up

--- a/index.html
+++ b/index.html
@@ -127,6 +127,27 @@
     </div>
   </div>
 
+  <div id="signup" class="grid-x">
+    <div class="white-bg min-h-480 text-center cell">
+      <h2 class="green padding-t-50">Sign Up for Special News & Offers!</h2>
+      <div class="grid-x">
+        <div class="small-12 medium-4 medium-offset-4 padding-t-50">
+          <form action="https://campingintheclouds.us12.list-manage.com/subscribe/post?u=2d082c960a5d0c716fd996692&amp;id=c5f02efd52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+    			<input type="text" name="FNAME" id="mce-FNAME" class="email" placeholder="Name" required="">
+          			<input type="email" class="required email" name="EMAIL" id="mce-EMAIL" placeholder="Email Address" required="">
+          			<div id="mce-responses" class="clear">
+    		<div class="response" id="mce-error-response" style="display:none"></div>
+    		<div class="response" id="mce-success-response" style="display:none"></div>
+    	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_86914025af753a48de528fbf1_c83482676e" value=""></div>
+
+          				<div><input class="radius button sign-up" type="submit" value="Sign Up!" name="subscribe" id="mc-embedded-subscribe"></div>
+          				</form>
+          </div>
+        </div>
+    </div>
+  </div>
+
     <div class="grid-x">
       <div class="black-bg text-center cell">
         <img src="images/CITC-logo-white.png" height="100" alt="Camping in the Clouds - Florence, WI Camping, RV, and Bar & Grill" class="float-left">
