--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               </tr>
             </tbody>
           </table>
+          <img style="padding-top: 25px;" src="images/camping-in-the-clouds-site-map.jpg" alt="Camping in the Clouds - Campground and RV Site Map, Florence, WI" />
         </div>
       </div>
   </div>
