--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Football Training, Hockey Training, Volleyball Training, Personal Training, Team Training, Athletic Performance, High School Sports Training">
-    <title>MindRight Performance Training | Sport and Fitness Training De Pere, WI </title>
+    <title>Camping in the Clouds | A campground and RV destination in Florence, WI</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -15,90 +14,147 @@
       <div class="grid-container">
         <div class="grid-x grid-padding-x text-center">
           <div class="small-12 large-8 large-offset-2 cell padding-t-50">
-            <h1><img class="float-left" src="images/mindright-logo.png" alt="MindRight Performance Training | Sport and Fitness Training De Pere, WI" width="300"></h1>
-            <h1 class="padding-t-50">Providing Better Coaching, Better Equipment,
-& Better Atmosphere!</h1>
-
-            <br />
-            <br />
-            <h2>SPORTS AND FITNESS TRAINING</h2>
-            <p>1 on 1 Personal Training<br />
-Small Group Training<br />
-Team Training<br />
-Membership Group Workouts</p>
+            <h1><img class="float-left" src="images/CITC-logo-white.png" alt="Camping in the Clouds - Florence, WI" width="300"></h1>
+            <h1 class="padding-t-50">Enjoy the beauty of the north woods.</h1>
+            <h2>Amazing sites, views, food, and surrounding activities<br> in Florence, WI.</h2>
           </div>
         </div>
       </div>
     </div>
 
+
+  <div class="white-bg">
+    <div class="grid-container">
+      <div class="grid-x grid-padding-x padding-b-100">
+        <div class="small-12 medium-8 medium-offset-2 text-center cell relative">
+          <h1 class="padding-t-100">Book a Reservation</h1>
+          <p class="padding-b-50">Stay 6 nights and the 7th night is FREE!</p>
+
+          <table class="text-left">
+            <thead>
+              <tr>
+                <th width="25%">Offering</th>
+                <th width="50%" style="padding-left: 25px;">Description</th>
+                <th width="25%" style="padding-left: 25px;">Cost</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td style="font-weight: bold;">Seasonal Campsite</td>
+                <td style="padding-left: 25px;">May 1, 2018 - April 30, 2019</td>
+                <td style="padding-left: 25px;">$1400</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td style="padding-left: 25px;">Includes: Electricity, Water and Sewer</td>
+                <td style="padding-left: 25px;"></td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Daily Sites</td>
+                <td style="padding-left: 25px;">Includes: Electricity, Water and Sewer</td>
+                <td style="padding-left: 25px;">$30/night</td>
+
+              </tr>
+              <tr>
+                <td></td>
+                <td style="padding-left: 25px;">Includes: Electricity and Water</td>
+                <td style="padding-left: 25px;">$25/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Tent Sites</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$18/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Park Model</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$65/night</td>
+              </tr>
+              <tr>
+                <td style="font-weight: bold;">Cabins</td>
+                <td style="padding-left: 25px;"></td>
+                <td style="padding-left: 25px;">$50/night</td>
+              </tr>
+              <tr>
+              </tr>
+            </tbody>
+          </table>
+          <img style="padding-top: 25px;" src="images/camping-in-the-clouds-site-map.jpg" alt="Camping in the Clouds - Campground and RV Site Map, Florence, WI" />
+        </div>
+      </div>
+  </div>
+
+  </div>
+  <div class="green-bg text-center">
+   <div class="grid-x grid-padding-x">
+    <div class="small-12 cell">
+      <h2 class="green">Come stay for a night or the entire season!</h2>
+      <p>Get directions below or give us a call if you have a question.</p>
+    </div>
+  </div>
     <div class="grid-x grid-padding-x">
-      <div class="coaches small-12 medium-6 medium-offset-3">
-        <div class="grid-x">
-          <div class="coach small-12 medium-4 text-center">
-            <img src="https://tinyfac.es/data/avatars/B0298C36-9751-48EF-BE15-80FB9CD11143-500w.jpeg" width="128">
-            <p class="name">Chase Emnott</p>
-            <p class="title">Owner & Coach</p>
-          </div>
-          <div class="coach small-12 medium-4 text-center">
-            <img src="https://pbs.twimg.com/profile_images/1018028565303058434/zOd1B7Kj.jpg" width="128">
-            <p class="name">Dan Hall</p>
-            <p class="title">Coach</p>
-          </div>
-          <div class="coach small-12 medium-4 text-center">
-            <img src="https://pbs.twimg.com/profile_images/964456899780530176/z42b6XiH.jpg" width="128">
-            <p class="name">David Konshak</p>
-            <p class="title">Coach</p>
-          </div>
-        </div>
+      <div class="small-12 medium-6 padding-t-50 cell">
+        <h4 class="white">Address</h2>
+        <p class="white">
+          Camping in the Clouds <br>
+          4080 US-2 <br>
+          Florence, WI 54121<br>
+          <a href="https://www.google.com/maps/dir/''/camping+in+the+clouds/data=!4m5!4m4!1m0!1m2!1m1!1s0x4d53c864249de501:0xc5688475b0463dd7?sa=X&ved=0ahUKEwjkxt6u1ZraAhUsyoMKHdzaBS0Q9RcIfDAL" class="button margin-t-25" target="_blank">Get Directions</a>
+        </p>
+      </div>
+      <div class="small-12 medium-6 padding-t-50 cell">
+        <h4 class="white">Contact</h2>
+        <p class="white">
+          Call us!<br>
+          <a href="tel:7155285596">(715) 528-5596</a></p>
       </div>
     </div>
+  </div>
 
-
-  <!-- <div class="black-bg text-center">
+  <div class="black-bg text-center">
+   <div class="grid-x grid-padding-x">
+    <div class="small-12 cell">
+      <h2 class="white">What Our Customers Say</h2>
+    </div>
+  </div>
     <div class="grid-x grid-padding-x">
       <div class="small-12 medium-6 medium-offset-3 padding-t-50 cell">
+        <p class="white">"We've been coming up every summer for about 7 years to visit my parents site, which has a beautiful view - their home away from home. The on-site amenities, include hot showers, a bar & restaurant, laundry and a pool. We are really excited about the NEW MANAGEMENT which is already making improvements, and the staff is friendly & helpful. We look forward to coming back!"</p>
+        <h4 class="white">Erin Arthur</h2>
           <br><br>
-          <p class="white">"Chase and his team helped me go from college walk-on to multi-year starter at Winona State, then helped me prepare for tryouts and combines, and ultimately land a starting position on a pro indoor team."</p>
-          <h4 class="white">Andrew Verboncouer</h2>
+          <p class="white">"The food was amazing! Stone pizza was to die for and the mine shaft burger was excellent as well! The campground has nice views! Will definitely be back! Very friendly owner as well!"</p>
+          <h4 class="white">Brooke Elizabeth</h2>
       </div>
     </div>
-  </div> -->
-
-  <div id="signup" class="grid-x grid-padding-x">
-      <div class="small-12 medium-10 text-center medium-offset-1 cell">
-        <div class="grid-x">
-          <div class="small-12 left cell">
-            <h2>Get updates on training specials, special hours, classes, and more!</h2>
-          </div>
-          <div class="small-12 medium-4 medium-offset-4 padding-25 left cell">
-            <div class="grid-x grid-padding-x">
-            <form action="https://campingintheclouds.us12.list-manage.com/subscribe/post?u=2d082c960a5d0c716fd996692&amp;id=c5f02efd52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-      			<input type="text" name="FNAME" id="mce-FNAME" class="small-12 medium-6 left email" placeholder="Name" required="">
-            <input type="email" class="small-12 medium-6 left required email" name="EMAIL" id="mce-EMAIL" placeholder="Email Address" required="">
-            			<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;"><input type="text" name="b_86914025af753a48de528fbf1_c83482676e" value=""></div>
-
-            				<div><input class="radius button sign-up" type="submit" value="JOIN!" name="subscribe" id="mc-embedded-subscribe"></div>
-            				</form>
-            </div>
-          </div>
-          </di
-        </div>
   </div>
 
-    <div class="grid-x grid-padding-x">
-      <div class="footer small-12 medium-10 medium-offset-1">
-        <div class="grid-x">
-          <div class="left small-12 medium-4 text-left cell">Located within Cornerstone Community Center on the 2nd floor of the Resch Olympic Pavilion. </p></div>
-          <div class="small-12 medium-4 medium-offset-4 text-right right cell">MindRight Performance Training, LLC<br />
-1640 Fernando Drive<br />
-De Pere, WI 54115</p></div>
+  <div id="signup" class="grid-x">
+    <div class="white-bg min-h-480 text-center cell">
+      <h2 class="green padding-t-50">Sign Up for Special News & Offers!</h2>
+      <div class="grid-x">
+        <div class="small-12 medium-4 medium-offset-4 padding-t-50">
+          <form action="https://campingintheclouds.us12.list-manage.com/subscribe/post?u=2d082c960a5d0c716fd996692&amp;id=c5f02efd52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+    			<input type="text" name="FNAME" id="mce-FNAME" class="email" placeholder="Name" required="">
+          			<input type="email" class="required email" name="EMAIL" id="mce-EMAIL" placeholder="Email Address" required="">
+          			<div id="mce-responses" class="clear">
+    		<div class="response" id="mce-error-response" style="display:none"></div>
+    		<div class="response" id="mce-success-response" style="display:none"></div>
+    	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_86914025af753a48de528fbf1_c83482676e" value=""></div>
+
+          				<div><input class="radius button sign-up" type="submit" value="Sign Up!" name="subscribe" id="mc-embedded-subscribe"></div>
+          				</form>
+          </div>
         </div>
     </div>
   </div>
+
+    <div class="grid-x">
+      <div class="black-bg text-center cell">
+        <img src="images/CITC-logo-white.png" height="100" alt="Camping in the Clouds - Florence, WI Camping, RV, and Bar & Grill" class="float-left">
+        <p class="padding-t-10 padding-b-10 white float-right">© 2018 - Camping in the Clouds, LLC.</p>
+      </div>
+    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
